--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "hashbrowns-breakfast-app",
+  "name": "breakfast-brain",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,9 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "next": "15.5.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "@hashbrownai/react": "0.2.3",
     "@hashbrownai/core": "0.2.3",
     "@hashbrownai/openai": "0.2.3",
@@ -30,7 +29,7 @@
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint": "^9.0.0",
+    "eslint-config-next": "15.5.2"
   }
 }
